--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="container">
         <h1 class="text-center">The Phone Shikari</h1>
         <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username"
-                aria-describedby="button-addon2">
+            <input id="search-box" type="text" class="form-control" placeholder="Recipient's username"
+                aria-label="Recipient's username" aria-describedby="button-addon2">
             <button onclick="searchBtn()" class="btn btn-outline-secondary" type="button"
                 id="button-addon2">Search</button>
         </div>
