--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
                 id="button-addon2">Search</button>
         </div>
     </div>
+    <!-- ------------------SEARCH RESULT--------------------- -->
+    <div class="container">
+        <div id="phone-container" class="row">
+
+        </div>
+    </div>
+    </div>
     <!-- ------------- JS FILE--------------->
     <script src="js/app.js"></script>
 </body>
