detailing most completed

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <!------------------------ SEARCH BOX AND BUTTON ------------------------>
+
     <div class="container">
         <h1 class="text-center">The Phone Shikari</h1>
         <div class="input-group mb-3">
@@ -24,13 +25,18 @@
                 id="button-addon2">Search</button>
         </div>
     </div>
-    <!-- ------------------SEARCH RESULT--------------------- -->
-    <div class="container">
-        <div id="phone-container" class="row">
 
-        </div>
+    <!--------------------- Explore Result ------------------->
+    <div id="details-container">
+
     </div>
+
+
+    <!-- ------------------SEARCH RESULT--------------------- -->
+    <div id="phone-container" class="container">
+
     </div>
+
     <!-- ------------- JS FILE--------------->
     <script src="js/app.js"></script>
 </body>
