--- a/index.html
+++ b/index.html
@@ -26,15 +26,22 @@
         </div>
     </div>
 
-    <!--------------------- Explore Result ------------------->
+    <!-- ---------------No Phone Found Area------------------ -->
+    <h2 id="error" class="text-danger text-center"></h2>
+
+    <!--------------------- Explore Button Result ------------------->
     <div id="details-container">
 
     </div>
 
 
     <!-- ------------------SEARCH RESULT--------------------- -->
-    <div id="phone-container" class="container">
+    <div class="container">
+        <div class="row">
+            <div id="phone-container" class="col-lg-4">
 
+            </div>
+        </div>
     </div>
 
     <!-- ------------- JS FILE--------------->
