--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         </div>
     </div>
 
+    <!-- --------------Spinner------------------------------ -->
+    <div id="spinner">Loading...</div>
     <!-- ---------------No Phone Found Area------------------ -->
     <h2 id="error" class="text-danger text-center"></h2>
 
