validation shown in ui

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- --------------Spinner------------------------------ -->
     <div id="spinner">Loading...</div>
     <!-- ---------------No Phone Found Area------------------ -->
-    <h2 id="error" class="text-danger text-center"></h2>
+    <!-- <h2 id="error" class="text-danger text-center"></h2> -->
 
     <!--------------------- Explore Button Result ------------------->
     <div id="details-container">
