--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <h1 class="text-center">The Phone Shikari</h1>
         <div class="input-group mb-3">
-            <input id="search-box" type="text" class="form-control" placeholder="Recipient's username"
+            <input id="search-box" type="text" class="form-control" placeholder="Search by Phone Name"
                 aria-label="Recipient's username" aria-describedby="button-addon2">
             <button onclick="searchBtn()" class="btn btn-outline-secondary" type="button"
                 id="button-addon2">Search</button>
