--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
 
     <!-- ------------------SEARCH RESULT--------------------- -->
     <div class="container">
-        <div class="row">
-            <div id="phone-container" class="col-lg-4">
+        <div id="phone-container" class="row">
 
-            </div>
         </div>
+
     </div>
 
     <!-- ------------- JS FILE--------------->
