--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <!-- --------------Spinner------------------------------ -->
-    <div id="spinner">Loading...</div>
+    <div id="spinner">Loading....</div>
 
 
     <!--------------------- Explore Button Result ------------------->
